fixed footer position on smaller screen sizes

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -18,6 +18,7 @@
     width: 282px;
     font-size: 14px;
     line-height: 16.94px;
+    margin-top: 48px;
   }
 }
 
